--- a/spring-example-ioc/pom.xml
+++ b/spring-example-ioc/pom.xml
@@ -4,11 +4,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.example</groupId>
-    <artifactId>spring-example-aop</artifactId>
+    <artifactId>spring-example-ioc</artifactId>
     <version>0.0.1</version>
     <packaging>jar</packaging>
 
-    <name>aop</name>
+    <name>ioc</name>
     <description>Example project for Spring</description>
 
     <properties>
@@ -45,18 +45,6 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
             <version>4.3.7.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-aop</artifactId>
-            <version>4.3.7.RELEASE</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.aspectj</groupId>
-            <artifactId>aspectjweaver</artifactId>
-            <version>1.8.9</version>
         </dependency>
     </dependencies>
 
